Update SePoDi